# motion_profile_control

./: CMakeLists.txt  MotionProfileGenerators.cmake.in  install.sh
include/motion_profile_generators/: fifth_order_poly_profile.hpp  motion_control_defs.hpp  motion_profile.hpp  motion_profile_controller.hpp  mpg_utils.hpp  scurve_profile.hpp  trapezoidal_profile.hpp  triangular_profile.hpp
src/: motion_profile_controller.cpp  triangular_profile.cpp
test/: CMakeLists.txt  controller_test
test/controller_class_test/: main.cpp
test/s_curve_profile_test/: main.cpp
test/trapezoidal_profile_test/: main.cpp
test/triangular_profile_test/: main.cpp
